--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -96,7 +96,7 @@
                         <!-- Profile Dropdown -->
                         <li class="nav-item dropdown">
                             <span class="nav-link dropdown-toggle text-warning" >
-                                <i class="fa fa-user"></i> {{ request.user.username }}
+                                <i class="fa fa-user"></i> {{ request.user.first_name }}
                             </span>
                             <div class="dropdown-content">
                                 <a href="/user_profile/">
